# RAG

./: README.md  pyproject.toml  requirements.txt
data/txt_files/: ml_intro.txt  python_intro.txt
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb
